--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,32 @@
     <title>Political Gaps - jQuest</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+    <meta property="article:author" content="Journalism++">
+    <meta name="theme-color" content="#48344C">
+
+    <meta name="description" content="">
+    <meta name="twitter:description" content="">
+    <meta property="og:description" content="">
+    <meta itemprop="description" content="">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@jquestapp">
+    <meta name="twitter:url" content="http://www.politicalgaps.eu">
+    <meta name="twitter:title" content="Political Gaps">
+    <meta name="twitter:image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
+
+    <meta property="og:url" content="http://www.politicalgaps.eu">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Political Gaps">
+    <meta property="og:image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
+    <meta property="og:site_name" content="Political Gaps">
+    <meta property="og:locale" content="en_US">
+
+    <meta itemprop="name" content="Political Gaps">
+    <meta itemprop="image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <!-- bower:css -->
