--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Political Gaps - jQuest</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -11,10 +10,10 @@
     <meta property="article:author" content="Journalism++">
     <meta name="theme-color" content="#48344C">
 
-    <meta name="description" content="">
-    <meta name="twitter:description" content="">
-    <meta property="og:description" content="">
-    <meta itemprop="description" content="">
+    <meta name="description" content="Discover how representative are your representatives.">
+    <meta name="twitter:description" content="Discover how representative are your representatives.">
+    <meta property="og:description" content="Discover how representative are your representatives.">
+    <meta itemprop="description" content="Discover how representative are your representatives.">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jquestapp">
