--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jquestapp">
     <meta name="twitter:url" content="http://www.politicalgaps.eu">
-    <meta name="twitter:title" content="Political Gaps">
+    <meta name="twitter:title" content="Political Gaps - jQuest">
     <meta name="twitter:image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
 
     <meta property="og:url" content="http://www.politicalgaps.eu">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Political Gaps">
+    <meta property="og:title" content="Political Gaps - jQuest">
     <meta property="og:image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
     <meta property="og:site_name" content="Political Gaps">
     <meta property="og:locale" content="en_US">
