--- a/src/index.html
+++ b/src/index.html
@@ -19,17 +19,17 @@
     <meta name="twitter:site" content="@jquestapp">
     <meta name="twitter:url" content="http://www.politicalgaps.eu">
     <meta name="twitter:title" content="Political Gaps - jQuest">
-    <meta name="twitter:image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
+    <meta name="twitter:image" content="http://www.politicalgaps.eu/assets/images/sharing.png?nocache">
 
     <meta property="og:url" content="http://www.politicalgaps.eu">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Political Gaps - jQuest">
-    <meta property="og:image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
+    <meta property="og:image" content="http://www.politicalgaps.eu/assets/images/sharing.png?nocache">
     <meta property="og:site_name" content="Political Gaps">
     <meta property="og:locale" content="en_US">
 
     <meta itemprop="name" content="Political Gaps">
-    <meta itemprop="image" content="http://www.politicalgaps.eu/assets/images/sharing.png">
+    <meta itemprop="image" content="http://www.politicalgaps.eu/assets/images/sharing.png?nocache">
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <!-- bower:css -->
